--- a/source/scoreboard/challenges.html
+++ b/source/scoreboard/challenges.html
@@ -8,9 +8,24 @@
 	<link rel='stylesheet' href="/css/formhelpers.min.css" />
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/scoreboard.js"></script>
+	<script type="text/javascript" src="/js/blockui.js"></script>
 	<title>PoliCTF 2015 | Challenges</title>
 </head>
-<body onload="getChallengesList();">
+<body onload="getChallenges(true);">
+
+	<div id="result" class="result_class">
+		<h2 id="X"><span style="text-align: right; cursor:pointer;" onclick="$('#result').hide()">X</span></h2>
+		<p id="result_data" class="center"></p>
+	</div>
+
+	<div id="chall" class="description">
+		<h2 id="X"><span style="text-align: right; cursor:pointer;" onclick="close_chall()">X</span></h2>
+		<p id="chall_name"></p>
+		<p id="chall_points" class="center"></p>
+		<p id="chall_html"></p>
+		<p><a id="chall_file"></a>
+	</div>
+
 	<div id="cloud1">
 		<img src="/images/cloud.png" alt="cloud">
 	</div>
@@ -28,10 +43,10 @@
 				</div>
 			</div>
 			<ul class="header">
-				<li>Category</li>
-				<li>Name</li>
-				<li>Point</li>
-				<li>Team solved</li>
+				<li><strong>Type</strong></li>
+				<li><strong>Name</strong></li>
+				<li><strong>Point</strong></li>
+				<li><strong>Team solved</strong></li>
 			</ul>
 			<div id="solved_chall">
 			</div>
@@ -40,6 +55,17 @@
 	<div id="trees">
 	</div>
 	<div id="floor">
+		<div id="credits">
+			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura Grossi</strong><br />
+			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong>
+		</div>
 	</div>
+
+	<script type="text/javascript">
+		$(document).ajaxStop($.unblockUI); 
+		function onbutton(id) {
+			$("#"+ id +"").css("cursor","pointer");
+		}
+	</script>
 </body>
 </html>
