--- a/source/scoreboard/login.html
+++ b/source/scoreboard/login.html
@@ -5,6 +5,7 @@
 	<link href="/css/template.css" media="screen" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/scoreboard.js"></script>
+	<script type="text/javascript" src="/js/blockui.js"></script>
 	<title>PoliCTF 2015</title>
 </head>
 <body>
@@ -26,10 +27,16 @@
 	<script>
 		function onbutton(id) {
 			$("#"+ id +"").css("text-decoration","underline");
+			$("#"+ id +"").css("cursor","pointer");
 		}
 		function offbutton(id) {
 			$("#"+ id +"").css("text-decoration","none");
 		}
 	</script>
+
+	<script type="text/javascript">
+		$(document).ajaxStop($.unblockUI); 
+	</script>
+
 </body>
 </html>
