--- a/source/scoreboard/ranking.html
+++ b/source/scoreboard/ranking.html
@@ -8,6 +8,7 @@
 	<link rel='stylesheet' href="/css/formhelpers.min.css" />
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/scoreboard.js"></script>
+	<script type="text/javascript" src="/js/blockui.js"></script>
 	<title>PoliCTF 2015 | Rankings</title>
 </head>
 <body onload="getScores();">
@@ -40,6 +41,14 @@
 	<div id="trees">
 	</div>
 	<div id="floor">
+		<div id="credits">
+			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura xxx</strong><br />
+			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong>
+		</div>
 	</div>
+
+	<script type="text/javascript">
+		$(document).ajaxStop($.unblockUI); 
+	</script>
 </body>
 </html>
