--- a/source/scoreboard/ranking.html
+++ b/source/scoreboard/ranking.html
@@ -42,7 +42,7 @@
 	</div>
 	<div id="floor">
 		<div id="credits">
-			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura xxx</strong><br />
+			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura Grossi</strong><br />
 			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong>
 		</div>
 	</div>
