--- a/source/scoreboard/level2.html
+++ b/source/scoreboard/level2.html
@@ -33,6 +33,9 @@
 		<div><img src="/images/greenchallenge.png" /> Web</div>
 		<div><img src="/images/orangechallenge.png" /> Pwnable</div>
 		<div><img src="/images/yellowchallenge.png" /> Forensics</div>
+		<div><img src="/images/closedchallenge.png" /> Closed</div>
+		<div><img src="/images/donechallenge.png" /> Solved</div>
+
 	</div>
 	<div id="player">
 		<span id="player_btn" class="glyphicon glyphicon-pause" aria-hidden="true" onClick="player_btn();"></span>
