--- a/source/registration.html
+++ b/source/registration.html
@@ -38,7 +38,7 @@
             <form class="form" id="reg-form" data-toggle="validator">
                 <div class="form-group">
                     <label for="username">Team name</label>
-                    <input type="text" class="form-control" pattern="^([_A-z0-9]){3,}$" maxlength="25" id="username" placeholder="TeamName" data-error required>
+                    <input type="text" class="form-control" pattern="^[a-zA-Z0-9 -_]{3,25}$" maxlength="25" id="username" placeholder="TeamName" data-error required>
                     <span class="help-block">Min 3 and Up to 25 characters [_A-z0-9]</span>
                 </div>
                 <div class="form-group">
