fixed pattern description

--- a/source/registration.html
+++ b/source/registration.html
@@ -39,7 +39,7 @@
                 <div class="form-group">
                     <label for="username">Team name</label>
                     <input type="text" class="form-control" pattern="^[a-zA-Z0-9 -_]{3,25}$" maxlength="25" id="username" placeholder="TeamName" data-error required>
-                    <span class="help-block">Min 3 and Up to 25 characters [_A-z0-9]</span>
+                    <span class="help-block">Min 3 and Up to 25 characters [a-zA-Z0-9 -_]</span>
                 </div>
                 <div class="form-group">
                     <label for="password_first">Password</label>
