Last changes... Forgot to push...

--- a/source/scoreboard/challenges.html
+++ b/source/scoreboard/challenges.html
@@ -39,7 +39,7 @@
 		<div class="wrapper">
 			<div class="page-header">
 				<div class="col-md-12">
-					<h1>PoliCTF - <a href="level2.html">Challenges</a></h1>
+					<h1>PoliCTF - <a href="scoreboard">Challenges</a></h1>
 				</div>
 			</div>
 			<ul class="header">
@@ -57,7 +57,8 @@
 	<div id="floor">
 		<div id="credits">
 			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura Grossi</strong><br />
-			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong>
+			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong><br />
+			Scoreboard managed by <strong>Stefano Sanfilippo</strong>
 		</div>
 	</div>
 
