--- a/source/scoreboard/login.html
+++ b/source/scoreboard/login.html
@@ -17,6 +17,8 @@
 		<label>Username</label><br /><input name="username" id="username" /><br /><br />
 		<label>Password</label><br /><input type="password" name="password" id="password" /><br /><br /><br />
 		<span id="login" onclick="login()" onmouseover="onbutton('login');" onmouseout="offbutton('login');">Login</span>
+		<br /><br /><br />
+		<span>We use a different domain for our API,<br /> you'll need third party cookies <strong>enabled</strong></span>
 	</form>
 
 	<div id="result_login" class="result_class" onclick="$('#result_login').hide()">
