--- a/source/scoreboard/scoreboard.html
+++ b/source/scoreboard/scoreboard.html
@@ -24,7 +24,7 @@
 	</div>
 	<div id="player">
 		<span id="player_btn" class="glyphicon glyphicon-pause" aria-hidden="true" onClick="player_btn();"></span>
-		<span id="player_time" onclick="loadChallange('12')"></span>
+		<span id="player_time" onclick="loadChallange('26')"></span>
 	</div>
 	<div id="legend">
 		<div><img src="/images/blackchallenge.png" /> Grab Bag</div>
@@ -33,6 +33,8 @@
 		<div><img src="/images/greenchallenge.png" /> Web</div>
 		<div><img src="/images/orangechallenge.png" /> Pwnable</div>
 		<div><img src="/images/yellowchallenge.png" /> Forensics</div>
+		<div><img src="/images/closedchallenge.png" /> Closed</div>
+		<div><img src="/images/donechallenge.png" /> Solved</div>
 	</div>
 	<div id="wrapper">
 		<div id="top" style="z-index:999">
