--- a/source/scoreboard/scoreboard.html
+++ b/source/scoreboard/scoreboard.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="/css/bootstrap.glyph.css" rel="stylesheet">
+	<link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
 	<link href="/css/template.css" media="screen" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="/js/jquery.js"></script>	
 	<script type="text/javascript" src="/js/scoreboard.js"></script>
