--- a/source/scoreboard/scoreboard.html
+++ b/source/scoreboard/scoreboard.html
@@ -14,15 +14,20 @@
 	<title>PoliCTF 2015</title>
 </head>
 <body onload="reload_ajax();">
+	<div id="stars">
+	</div>
 	<div id="cloud1">
 		<img src="/images/cloud.png" alt="cloud">
 	</div>
 	<div id="cloud2">
 		<img src="/images/cloud.png" alt="cloud">
 	</div>
-	<div id="sun">
-		<img src="/images/sun.png" alt="sun">
+	<div id="moon">
 	</div>
+	<div id="sun">
+		<img src="/images/cloud.png" alt="cloud">
+	</div>
+
 	<div id="player">
 		<span id="player_btn" class="glyphicon glyphicon-pause" aria-hidden="true" onClick="player_btn();"></span>
 		<span id="player_time" onclick="loadChallange('1')"></span>
