--- a/source/scoreboard/scoreboard.html
+++ b/source/scoreboard/scoreboard.html
@@ -165,7 +165,7 @@
 			</ul>
 		</div>
 		<div id="credits">
-			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura Grossi</strong><br />
+			Designed by<br /><strong>Alessandro De Vito</strong> and <strong>Laura Grossi</strong><br />
 			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong><br />
 			Scoreboard managed by <strong>Stefano Sanfilippo</strong>
 		</div>
