--- a/source/scoreboard/challenges.html
+++ b/source/scoreboard/challenges.html
@@ -55,8 +55,10 @@
 	<div id="trees">
 	</div>
 	<div id="floor">
-		<div id="credits">
-			Designed by<br /><strong>Alessandro Vito</strong> and <strong>Laura Grossi</strong><br />
+		<img id="credits_id"src="/images/credits.png" onclick="$('#credits_text').show()" />
+		<div id="credits_text" style="display: none">
+			<h4 style="text-align: right; margin-top: 0px;"><span style="text-align: right; cursor:pointer;" onclick="$('#credits_text').hide()">X</span></h4>
+			Designed by<br /><strong>Alessandro De Vito</strong> and <strong>Laura Grossi</strong><br />
 			Developed by<br /><strong>Jiang Wu</strong> and <strong>Davide Quarta</strong><br />
 			Scoreboard managed by <strong>Stefano Sanfilippo</strong>
 		</div>
