--- a/source/index.html
+++ b/source/index.html
@@ -77,6 +77,10 @@
         </div>
 
         <div class="main-text">
+            <h3><center><strike>Scoreboard Access</strike></center></h3>
+        </div>
+
+        <div class="main-text">
             <a href="registration.html"><h3>Registration is open!</h3></a>
             <a href="http://s.maggi.cc/polictf2015-local"><h4><u>{local PoliMi students need to fill this form}</u></h4></a>
         </div>
