Instructions link on homepage

--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
 
             <br />The live competition will be held in Politecnico di Milano, in a dedicated CTF arena in the hall in front of "<a href="">Aula Rogers</a>".
             <br />If you are interested in participating in person let us know at <a href="mailto:info@polictf.it">info@polictf.it</a>.
-            <br />
+            <br /><br /><strong>Instructions can be found <a href="instructions">here</a></strong><br />
         </div>
 
         <div class="main-text">
