--- a/source/layout.html
+++ b/source/layout.html
@@ -33,21 +33,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!--
                     <li>
-                        <a href="news.html">Scoreboard</a>
+                        <a href="instructions">Instructions</a>
                     </li>
-                    <li>
-                        <a href="news.html">Challenges</a>
-                    </li>
-                    -->
                     <li>
                         <a href="javascript:openmodalnews()">News</a>
                     </li>
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Registration <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="registration.html">Register</a></li>
+                  <li><a href="registration">Register</a></li>
                   <li><a href="http://s.maggi.cc/polictf2015-local" target="_blank">PoliMi students</a></li>
                 </ul>
               </li>
