--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="main-text">
-            <h3><center><strike>Scoreboard Access</strike></center></h3>
+            <h3><center><a href="scoreboard/login">Scoreboard Access</a></center></h3>
         </div>
 
         <div class="main-text">
