--- a/source/instructions.html
+++ b/source/instructions.html
@@ -11,7 +11,7 @@
 There are two common types of CTFs: <strong>Jeopardy</strong> and <strong>Attack-Defence</strong>.<br /><br />
 PoliCTF is a Jeopardy style CTF.<br />It has some questions (challenges) of different categories (Crypto, Reversing, Web, Pwnable, Forensics, GrabBag). <br />The objective of each challenge is to recover a special string called flag. PoliCTF flags are in the format "<strong><em>flag{<flag_here>}</em></strong>". The whole string including "flag{" and "}"" needs to be submitted as flag. <br />
 Teams gain points for every solved challenge.<br />The first three solvers for a challenge get bonus points (6%, 4% and 2% of the challenge value). <br />Some challenges are initially locked and can be opened only after some team solve unlocked challenges.
-<br /><br /><strong>PoliCTF scoreboard</strong> can be accessed <strike><a>here</a></strike>.
+<br /><br /><strong>PoliCTF scoreboard</strong> can be accessed <a href="http://polictf.it/scoreboard/login">here</a>.
 <br />You can download the packages of challenges directly from the scoreboard, or from this <a href="http://polictf.it/challenges.torrent">torrent</a>. <span style="font-size: 8pt">(Some challenge will be available only on the torrent)</span><br /> Each package has been encrypted with AES-256.
 <br />You can find the decryption keys on the scoreboard below the description of each challenge (if the challenge is open).<br /> 
 To decrypt the packages you can use GPG: <br /> 
