--- a/source/scoreboard/login.html
+++ b/source/scoreboard/login.html
@@ -16,7 +16,7 @@
 	<form class="center" id="login_form" onclick="$('#result_login').hide()">
 		<label>Username</label><br /><input name="username" id="username" /><br /><br />
 		<label>Password</label><br /><input type="password" name="password" id="password" /><br /><br /><br />
-		<span id="login" onclick="login()" onmouseover="onbutton('login');" onmouseout="offbutton('login');">Login</span>
+		<button id="login">Login</button>
 		<br /><br /><br />
 		<span>We use a different domain for our API,<br /> you'll need third party cookies <strong>enabled</strong></span>
 	</form>
@@ -27,6 +27,21 @@
 	</div>
 
 	<script>
+		$('#login').on('click', function() {
+			$("#login_form").submit(login());
+			return false;
+		});
+
+		$(function() {
+		    $("#login_form input").keypress(function (e) {
+		        if ((e.which && e.which == 13) || (e.keyCode && e.keyCode == 13)) {
+					return false;
+		        } else {
+		            return true;
+		        }
+		    });
+		});
+
 		function onbutton(id) {
 			$("#"+ id +"").css("text-decoration","underline");
 			$("#"+ id +"").css("cursor","pointer");
