counter to the end

--- a/source/index.html
+++ b/source/index.html
@@ -50,18 +50,19 @@
 
     <div class="col-xs-12 col-sm-12 col-md-5 main_block">
         <div class="main-text">
-            Competition will start in:
+            The competition will end in:
         <center>
          <h3>
           <div><script>
-          TargetDate = "07/10/2015 9:00 AM GMT";
+          TargetDate = "07/12/2015 9:00 AM GMT";
           BackColor = "black";
           ForeColor = "CornflowerBlue";
           CountActive = true;
           CountStepper = -1;
           LeadingZero = true;
-          DisplayFormat = "%D Days, %H Hours<br/>%M Minutes, %S Seconds.";
-          FinishMessage = "It is finally here!";
+          // DisplayFormat = "%D Days, %H Hours<br/>%M Minutes, %S Seconds.";
+          DisplayFormat = "%H Hours, %M Minutes, %S Seconds.";
+          FinishMessage = "The competition is ended!";
           </script>
 
           <span id="countdown" class="timer"></span>
