--- a/source/index.html
+++ b/source/index.html
@@ -62,13 +62,16 @@
           LeadingZero = true;
           // DisplayFormat = "%D Days, %H Hours<br/>%M Minutes, %S Seconds.";
           DisplayFormat = "%H Hours, %M Minutes, %S Seconds.";
-          FinishMessage = "The competition is ended!";
+          FinishMessage = "The competition is over!";
           </script>
 
           <span id="countdown" class="timer"></span>
 
           <script language="JavaScript" src="js/countdown.js"></script></div>
         </h3>
+        <div class="main-text">
+            <h3><center><a href="ranking/">Final Ranking</a></center></h3>
+        </div>
 
         </center>
 
