--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
 
 {% block content %}
 <div class="row maintext">
-            PoliCTF 2015 is a jeopardy style capture-the-flag competition that will be held both online and open to all competitors and live for a restricted number of participants. The competition will start during the second day of the <a href="http://dimva2015.it">DIMVA 2015</a> conference that will be held in Milan (Italy) at <b>10/07/2015 09:00 UTC </b> and will last for <b>48 hours</b>.
+            PoliCTF 2015 is a jeopardy style capture-the-flag competition held both online (open to all competitors) and live for a restricted number of participants. The competition started during the second day of the <a href="http://dimva2015.it">DIMVA 2015</a> conference in Milan (Italy) at <b>10/07/2015 09:00 UTC </b> and lasted for <b>48 hours</b>.
             Our official communication channel is #polictf on <a href="http://hackint.eu">hackint</a> irc network.
 </div>
 <div class="row marginbottom">
@@ -50,7 +50,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-5 main_block">
         <div class="main-text">
-            The competition will end in:
+            <!-- The competition will end in: -->
         <center>
          <h3>
           <div><script>
@@ -75,18 +75,12 @@
 
         </center>
 
-            <br />The live competition will be held in Politecnico di Milano, in a dedicated CTF arena in the hall in front of "<a href="">Aula Rogers</a>".
-            <br />If you are interested in participating in person let us know at <a href="mailto:info@polictf.it">info@polictf.it</a>.
+            <br />The live competition was held in Politecnico di Milano, in a dedicated CTF arena in the hall in front of "<a href="">Aula Rogers</a>".
             <br /><br /><strong>Instructions can be found <a href="instructions">here</a></strong><br />
         </div>
 
         <div class="main-text">
             <h3><center><a href="scoreboard/login">Scoreboard Access</a></center></h3>
-        </div>
-
-        <div class="main-text">
-            <a href="registration.html"><h3>Registration is open!</h3></a>
-            <a href="http://s.maggi.cc/polictf2015-local"><h4><u>{local PoliMi students need to fill this form}</u></h4></a>
         </div>
 
         <div class="main-text" id="prizes">
