--- a/source/ranking/index.html
+++ b/source/ranking/index.html
@@ -24,7 +24,7 @@
 		<div class="wrapper">
 			<div class="page-header">
 				<div class="col-md-12">
-					<h1>PoliCTF - <a href="scoreboard">Final Ranking</a></h1>
+					<h1>PoliCTF 2015 - <a href="scoreboard">Final Ranking</a></h1>
 				</div>
 			</div>
 			<ul class="header">
