--- a/source/layout.html
+++ b/source/layout.html
@@ -39,13 +39,13 @@
                     <li>
                         <a href="javascript:openmodalnews()">News</a>
                     </li>
-                <li class="dropdown">
+                    <!-- <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Registration <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="registration">Register</a></li>
                   <li><a href="http://s.maggi.cc/polictf2015-local" target="_blank">PoliMi students</a></li>
-                </ul>
-              </li>
+                  </ul>
+                  </li>-->
                     <li>
                         <a href="mailto:info@polictf.it"><span class="glyphicon glyphicon-envelope"></span></a>
                     </li>
