--- a/source/scoreboard/ranking.html
+++ b/source/scoreboard/ranking.html
@@ -25,7 +25,7 @@
 		<div class="wrapper">
 			<div class="page-header">
 				<div class="col-md-12">
-					<h1>PoliCTF - <a href="scoreboard">Challenges</a></h1>
+					<h1>PoliCTF - <a href="scoreboard">Ranking</a></h1>
 				</div>
 			</div>
 			<ul class="header">
