Fix broken link

--- a/source/index.html
+++ b/source/index.html
@@ -72,7 +72,7 @@
         <div class="main-text">
             <h3><center><a href="ranking/">Final Ranking</a></center></h3>
             <p>Most writeups are available from <a
-                href="https://ctftime.org/event/207/tasks">CTF Time</a> or from the <a
+                href="https://ctftime.org/event/207/tasks/">CTF Time</a> or from the <a
                 href="https://github.com/ctfs/write-ups-2015/tree/master/polictf-2015">write-ups-2015</a>
             repository on github.</p>
             <p>We also released a couple of "official" writeups on <a href="http://towerofhanoi.github.io/">our blog</a> and some
